fixed background on query block posts not covering entire card

--- a/theme/scss/site/posts.scss
+++ b/theme/scss/site/posts.scss
@@ -23,6 +23,14 @@ main.site-main .entry-content {
 		@extend .rounded-pill;
 		@extend .bg-secondary;
 	}
+
+
+}
+
+li.wp-block-post {
+	div {
+		height: 100%;
+	}
 }
 
 .post-card {
